# amy

./: .travis.yml  Cargo.toml  README.md
doc/: getting_started.md
src/: channel.rs  epoll.rs  event.rs  frame_reader.rs  frame_writer.rs  handle.rs  kqueue.rs  lib.rs  line_reader.rs  notification.rs  poller.rs  registrar.rs  registration.rs  socket.rs  timer.rs  timer_heap.rs  timerfd.rs  user_event.rs
tests/: basic.rs  channel_test.rs  edge-trigger-test.rs  multithread-example.rs  safe_oneshot.rs  timer_test.rs
