[package]
name = "amy"
version = "0.5.4"
authors = ["Andrew J. Stone <andrew.j.stone.1@gmail.com>"]
description = "Polling and Registration abstractions around kqueue and epoll for multithreaded async network programming"
repository = "https://github.com/andrewjstone/amy"
keywords = ["async", "epoll", "kqueue", "eventloop", "timer"]
license = "Apache-2.0"

[dependencies]
libc = "0.2"

[dependencies.nix]
version = "0.6"
features = ["eventfd"]

[dev-dependencies]
assert_matches = "1.0"
